--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <meta content='Scribble' property='og:title' />
-    <title>Scribble</title>
+    <meta content='Aram Panasenco' property='og:title' />
+    <title>Aram Panasenco's Blog</title>
     <link href='/images/fav.png' rel='shortcut icon'>
     <link href='/stylesheets/style.css' rel='stylesheet' type='text/css' />
     <link href='/stylesheets/responsive.css' rel='stylesheet' type='text/css' />
